1.2.25: 2006-02-03
	- fix resize of maximized windows when taskbar set to AutoHide
	- fix support for screens 0.1 and up
	- fix icesh workspace switching (Thomas Holder)
	- Polish translation fix (Pawel Chwalowski)
	- fix focus after closing fullscreen window

1.2.25pre1: 2006-01-31
	- fix format in window size/position display (Bert Wesarg)
	- fix configure to use pkg-config for xft (Marius Feraru)
	- fix build with Sun Forte C++ (Grant McDorman)
	- icewmtray crash fixes (Grant McDorman)

1.2.24: 2006-01-22
	- option to --replace an extisting window manager
        - change menu scroll wheel direction (Thomas Holder)
        - paint desktop tray background (Thomas Holder)
        - gcc 4.1 build fixes (Hanno Boeck)
	- fix gcc strict aliasing errors (Pavel Nemec)
        
1.2.24pre1: 2005-12-04
	- restore Dutch translation from Ton Kersten
	- zh_TW translation from Wei-Lun Chao
	- fix TaskBarKeepBelow=1 preference
	- fix problems in horizontal maximization
	- implemented support for --replace option
	- Make shaped decorations work in 21 bit graphics cards 
          (like those common in sparcs) -- Bernhard R. Link

1.2.23: 2005-08-14
	- make taskbar pop out even when collaped
	- Slovak translation update (Zdenko Podobny)

1.2.23pre1: 2005-07-31
	- fix crash when hiding the taskbar and "collapse" button is hidden
	- fix repeated drag over taskbar icon not working
	- fix problems with Unmap events being handled incorrectly
	- customizable placement order options for minimized window icons
          (MiniIconsPlaceHorizontal, MiniIconsRightToLeft, 
          MiniIconsBottomToTop) - (Konstantin Korikov - lostclus)

1.2.22: 2005-07-17
	- AutoShowDelay setting (opposite of AutoHideDelay)
	- use Workspace status window instead of showing the taskbar
	  when workspace changes if taskbar autohide is enabled

1.2.22pre3: 2005-07-15
	- fix focusing after window minimized or hidden

1.2.22pre2: 2005-07-10
	- Remember last focused window per-workspace